--- a/the-parallax-background-in-question/index.html
+++ b/the-parallax-background-in-question/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,16 @@
     <title>Parallax Backgrounds</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
-    <canvas id="canvas1"></canvas>
-    
+    <div id="container">
+        <canvas id="canvas1"></canvas>
+        <p>Game speed: <span id="showGameSpeed"></span></p>
+        <input type="range" min="0" max="30" value="5" class="slider" id="slider">
+
+    </div>
+
     <script src="./js/script.js"></script>
 </body>
+
 </html>
